--- a/learning_observer/prototypes/dash_wo_teacher_dashboard/wo_dash/assets/styles.css
+++ b/learning_observer/prototypes/dash_wo_teacher_dashboard/wo_dash/assets/styles.css
@@ -71,3 +71,14 @@
     box-shadow: 0px 0px 5px var(--bs-gray-300);
     border-radius: 0.4rem;
 }
+
+.form-check-input:disabled {
+    display: none;
+}
+
+.nested-form:has(.subchecklist-label) {
+    margin-left: 1.5em;
+}
+.nested-form:has(.form-check-input:disabled) {
+    padding-left: 0;
+}
