Scrolling handled correctly in DA Problem display

--- a/modules/lo_dash_react_components/src/styles.scss
+++ b/modules/lo_dash_react_components/src/styles.scss
@@ -386,7 +386,7 @@ body {
   }
 
   .background-canvas {
-    position: absolute;
+    position: fixed;
     z-index: -1;
     top: 0;
     right: 0;
