--- a/modules/lo_dash_react_components/src/lib/index.scss
+++ b/modules/lo_dash_react_components/src/lib/index.scss
@@ -4,7 +4,7 @@
         justify-content: space-between;
         align-items: center;
         background-color: lightgray;
-        width: 100vw;
+        width: 100%;
         padding: 10px 0;
         box-sizing: border-box;
         margin: 0;
