Changed ID selector to class selector and removed extra dom element

--- a/modules/lo_dash_react_components/src/lib/index.scss
+++ b/modules/lo_dash_react_components/src/lib/index.scss
@@ -1,4 +1,4 @@
-#student-select-header {
+.student-select-header {
     .nav-header {
         display: flex;
         justify-content: space-between;
