--- a/modules/lo_dash_react_components/src/lib/components/LONameTag.scss
+++ b/modules/lo_dash_react_components/src/lib/components/LONameTag.scss
@@ -1,7 +1,18 @@
 .LONameTag {
-    img {
+    img.name-tag-photo {
         border-radius: 50%;
         width: 42px;
-        margin-right: 0.5em;
+    }
+    span.name-tag-photo {
+        font-family: monospace;
+        text-align: center;
+        width: 42px;
+        background-color: white;
+        padding: 0.25rem;
+        border-radius: 50%;
+        border: 1px solid lightgray;
+    }
+    .name-tag-name {
+        margin-left: 0.5em;
     }
 }
