--- a/modules/lo_dash_react_components/src/lib/components/LOPanelLayout.scss
+++ b/modules/lo_dash_react_components/src/lib/components/LOPanelLayout.scss
@@ -10,6 +10,7 @@
         transition: all 0.3s ease-in-out;
     }
     .side-panel.closed {
-        overflow: hidden
+        overflow: hidden;
+        height: 0;
     }
 }
