--- a/modules/lo_dash_react_components/src/lib/index.scss
+++ b/modules/lo_dash_react_components/src/lib/index.scss
@@ -245,11 +245,11 @@ body {
   }
 
   .left-column {
-    @include columnMixin
+    @include columnMixin;
   }
 
   .right-column {
-    @include columnMixin
+    @include columnMixin;
     flex-direction: column;
   }
 
