--- a/modules/wo_bulk_essay_analysis/wo_bulk_essay_analysis/assets/styles.css
+++ b/modules/wo_bulk_essay_analysis/wo_bulk_essay_analysis/assets/styles.css
@@ -4,3 +4,12 @@
   bottom: 0;
   min-height: 250px;
 }
+
+.placeholder button:last-child {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.placeholder>div:last-child {
+  display: inline;
+}
